--- a/other/hcrl_project/v_chat/ios/Runner/Info.plist
+++ b/other/hcrl_project/v_chat/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+<key>CFBundleURLTypes</key>
+<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>com.googleusercontent.apps.644793377175-0t3shtoe47sto4s7h8vp71k1s1u95vca</string>
+		</array>
+	</dict>
+</array>
 </dict>
 </plist>
