--- a/other/hcrl_project/v_chat/pubspec.yaml
+++ b/other/hcrl_project/v_chat/pubspec.yaml
@@ -13,10 +13,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  logger: ^1.0.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  firebase_core: ^3.5.0
+
+  firebase_auth: ^5.3.0
+
+  google_sign_in: ^6.2.1
+
+  cloud_firestore: ^5.4.2
 
 dev_dependencies:
   flutter_test:
