--- a/other/hcrl_project/v_chat/pubspec.yaml
+++ b/other/hcrl_project/v_chat/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
 
   firebase_storage: ^12.3.1
 
+  emoji_picker_flutter: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
