--- a/other/hcrl_project/v_chat/pubspec.yaml
+++ b/other/hcrl_project/v_chat/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   emoji_picker_flutter: ^3.0.0
 
+  firebase_messaging: ^15.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
