--- a/other/hcrl_project/v_chat/ios/Runner/Info.plist
+++ b/other/hcrl_project/v_chat/ios/Runner/Info.plist
@@ -57,10 +57,15 @@
 	</dict>
 </array>
 
-<key>NSPhotoLibraryUsageDescription</key>
-<string>App requires access to the photo library for ppicking pictures.</string>
-<key>NSCameraUsageDesCription</key>
-<string>App requires access to the camera for taking pictures.</string>
+	<!-- Permissions for picking image from gallery or taking image from camera-->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App requires access to the photo library for ppicking pictures.</string>
+	<key>NSCameraUsageDesCription</key>
+	<string>App requires access to the camera for taking pictures.</string>
+
+	<!--For Storing Image into Gallery-->
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app requires read and write access to the photo library.</string>
 
 </dict>
 </plist>
