--- a/other/hcrl_project/v_chat/pubspec.yaml
+++ b/other/hcrl_project/v_chat/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
 
   firebase_messaging: ^15.1.3
 
+  saver_gallery: ^3.0.6
+  
+  http: ^1.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
